--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: David Sobrín-Hidalgo
 email: dsobh@unileon.es
 description: >- # this means to ignore newlines until "baseurl:" ""
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://dsobh.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  dsobh
 
 # Build settings
